--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,3 +10,14 @@
   box-sizing: border-box;
   font-family: "Manrope", sans-serif;
 }
+
+ul,
+ol {
+  list-style-type: circle;
+}
+
+li {
+  list-style: disc outside none;
+  display: list-item;
+  margin-left: 1em;
+}
