--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,22 @@ li {
   display: list-item;
   margin-left: 1em;
 }
+
+.auth-bg {
+  background: url("/images/auth-bg.png") #449eee;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  border-radius: 8px;
+  border: 1px solid #d1d5db;
+  background: #f9fafb;
+  width: 100%;
+  padding: 12px 16px;
+}
